# Rust-raytracer

./: .gitignore  Cargo.toml  README.md
app/: Cargo.toml
app/src/: main.rs
app/src/scenes/: test.json
src/: lib.rs  point.rs  rendering.rs  scene.rs  vector.rs
