[package]
name = "raytracer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.104", features = ["derive"] }
serde_derive = "0.9.7"
serde_json = {version = "1.0"}
image = "0.12.3"
clap = "2.20"
