[package]
name = "raytracer-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
raytracer = { path = ".." }
serde = { version = "1.0.104", features = ["derive"] }
serde_json = {version = "1.0"}
clap = "2.20"
image = "0.12.3"
